crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__nodes_missing.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (MISSING) @m
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "m"
S2 "Test"
S3 "MISSING"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { m }

[type_members]
M0: S1 → T0  ; m: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 1 :: T1

[transitions]
  0   ε                                     ◼

Test:
  1   ε                                     2
  2       (MISSING) [Node Set(M0)]          4
  4                                         ▶
