crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__nodes_named.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (identifier) @id
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { id }

[type_members]
M0: S1 → T0  ; id: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 1 :: T1

[transitions]
  0   ε                                     ◼

Test:
  1   ε                                     2
  2   ε   [Obj]                             4
  4  !!!  (identifier) [Node Set(M0)]       6
  6   ε   [EndObj]                          8
  8                                         ▶
