crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__nodes_wildcard_any.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (pair key: _ @key)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "key"
S2 "Test"
S3 "pair"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { key }

[type_members]
M0: S1 → T0  ; key: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04       (pair)                           05
  05   ▽   key: _ [Node Set(M0)]            07
  07   △                                    08
  08   ε   [EndObj]                         10
  10                                        ▶
