crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__optional_first_child.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (program (identifier)? @id (number) @n)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "n"
S3 "Test"
S4 "program"
S5 "number"
S6 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { id, n }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; id: T2
M1: S2 → T0  ; n: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00  𝜀                                     ◼

Test:
  01  𝜀                                     02
  02       (program)                        03
  03  𝜀                                     12, 10
  05                                        ▶
  06  ↓*   (number) [Node Set(M1)]          14
  08  *    (number) [Node Set(M1)]          14
  10  𝜀    [Null Set(M0)]                   06
  12  ↓*   (identifier) [Node Set(M0)]      08
  14 *↑¹                                    05
