crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__optional_null_injection.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (function_declaration (decorator)? @dec)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "dec"
S2 "Test"
S3 "function_declaration"
S4 "decorator"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { dec }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; dec: T2

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04  ‼·   (function_declaration)           05
  05   ε                                    20, 13
  07  ‼·   (decorator) [Node Set(M0)]       09
  09   △                                    11
  10                                        ▶
  11   ε   [EndObj]                         10
  13   ε   [Null Set(M0)]                   11
  15   ▷                                    18
  16   ε                                    15, 13
  18   ε                                    07, 16
  20   ▽                                    18
