crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__quantifiers_first_child_array.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (array (identifier)* @ids (number) @n)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "ids"
S2 "n"
S3 "Test"
S4 "array"
S5 "number"
S6 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:2  ; { ids, n }
T3 = Struct  M2:1  ; { ids }
T4 = Struct  M3:1  ; { n }

[type_members]
M0: S1 → T1  ; ids: T1
M1: S2 → T0  ; n: <Node>
M2: S1 → T1  ; ids: T1
M3: S2 → T0  ; n: <Node>

[type_names]
N0: S3 → T2  ; Test

[entrypoints]
Test = 01 :: T2

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   !   (array)                          05
  05   ε   [Arr]                            07
  07   ε                                    29, 22
  09   !   (identifier) [Node Push]         11
  11   ε                                    35, 20
  13                                        ▶
  14   ε   [EndObj]                         13
  16   ▽   (number) [Node Set(M1)]          36
  18   ▷   (number) [Node Set(M1)]          36
  20   ε   [EndArr Set(M0)]                 18
  22   ε   [EndArr Set(M0)]                 16
  24   ▷                                    27
  25   ε                                    24, 22
  27   ε                                    09, 25
  29   ▽                                    27
  30   ▷                                    33
  31   ε                                    30, 20
  33   ε                                    09, 31
  35   ▷                                    33
  36   △                                    14
