crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__quantifiers_optional.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (function_declaration (decorator)? @dec)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "dec"
S2 "Test"
S3 "function_declaration"
S4 "decorator"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { dec }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; dec: T2

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00  𝜀                                     ◼

Test:
  01  𝜀                                     02
  02       (function_declaration)           03
  03  𝜀                                     05, 09
  05  ↓*   (decorator) [Node Set(M0)]       07
  07 *↑¹                                    08
  08                                        ▶
  09  𝜀    [Null Set(M0)]                   08
