crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__quantifiers_optional_nongreedy.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (function_declaration (decorator)?? @dec)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "dec"
S2 "Test"
S3 "function_declaration"
S4 "decorator"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { dec }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; dec: T2

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (function_declaration)           08
  08   ε                                    14, 21
  10   !   (decorator) [Node Set(M0)]       12
  12   △                                    13
  13                                        ▶
  14   ε   [Null Set(M0)]                   13
  16   ▷                                    19
  17   ε                                    14, 16
  19   ε                                    17, 10
  21   ▽                                    19
