crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__quantifiers_plus_nongreedy.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (identifier)+? @items
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayPlus(T0)  ; <Node>+
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 01 :: T2

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   ε   [Arr]                            06
  06   ▽                                    17
  07       (identifier) [Node Push]         09
  09   ε                                    14, 24
  11                                        ▶
  12   ε   [EndObj]                         11
  14   ε   [EndArr Set(M0)]                 12
  16   ▷                                    17
  17   ε                                    16, 07
  19   ▷                                    22
  20   ε                                    14, 19
  22   ε                                    20, 07
  24   ▷                                    22
